mdapipkg/objects/JobApp__c/fields/Average_Mark__c.field-meta.xml
<CustomField>
    <fullName>Average_Mark__c</fullName>
    <formula>Points_Sum__c /  Number_of_Interviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Mark</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>