mdapipkg/objects/JobApp__c/fields/Number_of_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interviews__c</fullName>
    <label>Number of Interviews</label>
    <summaryForeignKey>Review__c.JobApp__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>