mdapipkg/objects/JobApp__c/fields/Points_Sum__c.field-meta.xml
<CustomField>
    <fullName>Points_Sum__c</fullName>
    <label>Points Sum</label>
    <summarizedField>Review__c.Interview_result__c</summarizedField>
    <summaryForeignKey>Review__c.JobApp__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>