mdapipkg/objects/JobApp__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Position</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Position closed</errorMessage>
        <filterItems>
            <field>Position__c.Status__c</field>
            <operation>equals</operation>
            <value>Opened</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Position__c</referenceTo>
    <relationshipLabel>JobApps</relationshipLabel>
    <relationshipName>JobApps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>