mdapipkg/objects/JobApp__c/fields/Resume__c.field-meta.xml
<CustomField>
    <fullName>Resume__c</fullName>
    <description>Resume link</description>
    <inlineHelpText>Resume URL</inlineHelpText>
    <label>Resume</label>
    <required>true</required>
    <type>Url</type>
</CustomField>