mdapipkg/objects/JobApp__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st New stage</fullName>
            </value>
            <value>
                <fullName>2nd Resume accepted</fullName>
            </value>
            <value>
                <fullName>2nd Resume rejected</fullName>
            </value>
            <value>
                <fullName>3rd Personal interview successfully passed</fullName>
            </value>
            <value>
                <fullName>3rd Personal interview failed</fullName>
            </value>
            <value>
                <fullName>4th Technical interview successfully passed</fullName>
            </value>
            <value>
                <fullName>4th Technical interview failed</fullName>
            </value>
            <value>
                <fullName>5th English interview successfully passed</fullName>
            </value>
            <value>
                <fullName>5th English interview failed</fullName>
            </value>
            <value>
                <fullName>Hired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>